Small update for pages.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./Boundingbox.js"></script> <!-- Here first because Adventurer needs bounding box -->
+    <script type="text/javascript" src="./boundingbox.js"></script> <!-- Here first because Adventurer needs bounding box -->
     <script type="text/javascript" src="./BoundingCircle.js"></script> <!-- Here first because Slash needs Bounding Circle -->
     <script type="text/javascript" src="./animator.js"></script> <!-- Here first because Adventurer needs animator -->
     
